--- a/global.css
+++ b/global.css
@@ -4,12 +4,14 @@
 *, *::before, *::after {
     box-sizing: border-box;
 }
+
 /*
   2. Remove default margin
 */
 * {
     margin: 0;
 }
+
 /*
   Typographic tweaks!
   3. Add accessible line-height
@@ -20,6 +22,7 @@ body {
     font-family: Inter, sans-serif;
     -webkit-font-smoothing: antialiased;
 }
+
 /*
   5. Improve media defaults
 */
@@ -27,18 +30,21 @@ img, picture, video, canvas, svg {
     display: block;
     max-width: 100%;
 }
+
 /*
   6. Remove built-in form typography styles
 */
 input, button, textarea, select {
     font: inherit;
 }
+
 /*
   7. Avoid text overflows
 */
 p, h1, h2, h3, h4, h5, h6 {
     overflow-wrap: break-word;
 }
+
 /*
   8. Create a root stacking context
 */
@@ -49,4 +55,24 @@ p, h1, h2, h3, h4, h5, h6 {
 a {
     text-decoration: none;
     color: inherit;
+}
+
+.btn {
+    background: rgba(107, 176, 139, 0.2);
+    border: 0;
+    padding: .5rem;
+    border-radius: 5px;
+    color: #93FFC5;
+    display: flex;
+    align-items: center;
+    transition: all .3s ease-in-out;
+}
+
+.btn:hover {
+    background: rgba(107, 176, 139, 0.4);
+    transform: scale(1.1);
+}
+.btn-link {
+    font-weight: bold;
+    font-size: clamp(.6rem, 1.5vw, 1rem);
 }
