--- a/global.css
+++ b/global.css
@@ -1,15 +1,17 @@
 /*
   1. Use a more-intuitive box-sizing model.
 */
-*, *::before, *::after {
-    box-sizing: border-box;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
 /*
   2. Remove default margin
 */
 * {
-    margin: 0;
+  margin: 0;
 }
 
 /*
@@ -18,61 +20,76 @@
   4. Improve text rendering
 */
 body {
-    line-height: 1.5;
-    font-family: Inter, sans-serif;
-    -webkit-font-smoothing: antialiased;
+  line-height: 1.5;
+  font-family: Inter, sans-serif;
+  -webkit-font-smoothing: antialiased;
 }
 
 /*
   5. Improve media defaults
 */
-img, picture, video, canvas, svg {
-    display: block;
-    max-width: 100%;
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
 }
 
 /*
   6. Remove built-in form typography styles
 */
-input, button, textarea, select {
-    font: inherit;
+input,
+button,
+textarea,
+select {
+  font: inherit;
 }
 
 /*
   7. Avoid text overflows
 */
-p, h1, h2, h3, h4, h5, h6 {
-    overflow-wrap: break-word;
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
 }
 
 /*
   8. Create a root stacking context
 */
-#root, #__next {
-    isolation: isolate;
+#root,
+#__next {
+  isolation: isolate;
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 .btn {
-    background: rgba(107, 176, 139, 0.2);
-    border: 0;
-    padding: .5rem;
-    border-radius: 5px;
-    color: #93FFC5;
-    display: flex;
-    align-items: center;
-    transition: all .3s ease-in-out;
+  background: rgba(107, 176, 139, 0.2);
+  border: 0;
+  padding: .5rem;
+  border-radius: 5px;
+  color: #93FFC5;
+  display: flex;
+  align-items: center;
+  transition: all .3s ease-in-out;
 }
 
 .btn:hover {
-    background: rgba(107, 176, 139, 0.4);
-    transform: scale(1.1);
+  background: rgba(107, 176, 139, 0.4);
+  transform: scale(1.1);
 }
+
 .btn-link {
-    font-weight: bold;
-    font-size: clamp(.6rem, 1.5vw, 1rem);
+  font-weight: bold;
+  font-size: clamp(.6rem, 1.5vw, 1rem);
 }
