feat: add reusable main-wrapper

--- a/global.css
+++ b/global.css
@@ -99,6 +99,13 @@ a {
   font-size: clamp(.6rem, 1.5vw, 1rem);
 }
 
+.main-wrapper {
+  min-height: 100vh;
+  max-width: 80rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .logo {
   cursor: pointer;
 }
