--- a/global.css
+++ b/global.css
@@ -85,6 +85,7 @@ a {
   color: #93FFC5;
   display: flex;
   align-items: center;
+  cursor: pointer;
   transition: all .3s ease-in-out;
 }
 
@@ -96,6 +97,21 @@ a {
 .btn-link {
   font-weight: bold;
   font-size: clamp(.6rem, 1.5vw, 1rem);
+}
+
+.main-wrapper {
+  min-height: 100vh;
+  max-width: 80rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.heading {
+  font-size: clamp(1.5rem, 5vw, 3rem);
+}
+
+.logo {
+  cursor: pointer;
 }
 
 .error {
