--- a/src/sign-up/signup.css
+++ b/src/sign-up/signup.css
@@ -52,7 +52,7 @@
     border: 0;
     padding: .5rem;
     border-radius: 5px;
-    color: #F5F5F5;
+    color: var(--light-gray);
     cursor: pointer;
     transition: all .15s ease-in-out;
 }
@@ -73,7 +73,7 @@
     min-height: 100vh;
     backdrop-filter: brightness(0.2);
     padding: 3rem;
-    color: #f5f5f5;
+    color: var(--light-gray);
 }
 
 .right-section__content__heading {
