--- a/src/events/create.css
+++ b/src/events/create.css
@@ -7,16 +7,48 @@
 .right-section {
     width: 100%;
     padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
 }
 
 .form {
     display: flex;
     flex-direction: column;
     padding: 2rem;
+    gap: .3rem;
+}
+
+.form label {
+    align-self: flex-start;
+}
+
+.form input,
+.form textarea {
+    background-color: var(--light-gray);
+    border-radius: 7px;
+    padding: 8px;
+    border: 1px solid var(--jet-black);
+    outline: 0;
+    transition: all .15s ease-in-out;
+}
+
+.form input:hover,
+.form textarea:hover {
+    box-shadow: 0 0 5px var(--jet-black);
 }
 
 .form__maxSlot-input {
-    width: 10rem;
+    width: 5rem;
+}
+
+/* remove arrows */
+.form__maxSlot-input::-webkit-inner-spin-button,
+.form__maxSlot-input::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0;
 }
 
 .form__frontmatter-textarea {
@@ -29,9 +61,27 @@
     resize: vertical;
 }
 
+.form__btn {
+    background: transparent;
+    color: var(--jet-black);
+    padding: .5rem;
+    border-radius: 5px;
+    transition: all .3s ease-in-out;
+    text-transform: uppercase;
+}
+
+
+.form__btn:hover {
+    background: var(--jet-black);
+
+    font-weight: bold;
+    color: var(--light-gray);
+
+}
+
 .definition {
     display: flex;
-    gap: .5rem;
+    flex-direction: column;
 }
 
 .definition dt {
